--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<meta http-equiv = "refresh" content = "0; url = qepard.github.io/html-css-manual" />
 </body>
 </html>
