--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<meta http-equiv = "refresh" content = "0; url = qepard.github.io/html-css-manual" />
+<meta http-equiv = "refresh" content = "0; url = https://qepard.github.io/html-css-manual" />
 </body>
 </html>
